1.1.35-beta3
- Update bookmark loading logic.
- Update update history loading logic.
- Update menu icon.
- Fix context menu for Novel List.
- Refactor DB model.
- Update android sdk and android studio.
- Fix Issue #213: Position is not saved in landscape mode.
- Try to fix Issue #210: Reaching End of Chapter Doesn't Mark as Read
- Update logic for relink images.
- Update keystore.

1.1.34
- Fix Issue #208: ActionBar hide first few lines.
- Fix Issue #206: Always hide the ZoomControl button, zooming feature still working using 2 finger pinch
- Fix Issue #205: Disable ToolBar if not supported on Settings page.
- Fix Issue #204: Chapter Listing is not updated when resuming.
- Fix unhandled NullPointer exceptions.

1.1.33
- Update Issue#199: Add touch listener for toolbar when in fullscreen mode.
- Remove srcset from image parser.
- Add feature#180: Add option to reset Zoom level from Settings -> Reading Layout -> Group 1 -> Reset Zoom Level.
- Fix toggle fullscreen on older android (Gingerbread).
- Fix some null pointer exception error.

1.1.32
- Enable toolbar for Settings Activity.
- Fix Issue #202: Default Zoom based on screen density.
- Fix null pointer exception when loading novel details.
- Fix Issue #200: Screen rotation lock.
- Fix Issue #197: Download List cleanup.
- Fix Novel List & Details title update.
- Fix Issue #194: Item list color.
- Fix unhandled exception on novel list.
- Update thumb.php handling.
- Fix page reload when resuming activity in fullscreen mode.

1.1.31
- Update UI to use material design.
- Replace ActionBarSherlock with appcompat.
- Fix cover issue.
- Update external page handling.

1.1.30
- Update blogspot handler for country redirect.

1.1.29
- Fix Issue #189: Images not loaded on Android 5.x
- Fix update time interval scheduler.

1.1.28b
- Fix Issue #184: Update category for teaser to Category:Teaser_(English).
- Add Feature #187: New option to only update when Wifi is connected.