@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.erakk.lnreader"
     android:installLocation="auto"
-    android:versionCode="201509030"
-    android:versionName="1.1.35-beta2">
+    android:versionCode="201509070"
+    android:versionName="1.1.35-beta3">
 
     <uses-sdk
         android:minSdkVersion="8"
